# RIVER

./: Cargo.toml  README.md
examples/mnist/: main.rs
examples/voc/: main.rs
src/: data.rs  lib.rs
src/addons/: mod.rs
src/addons/classification/: instance.rs  instance_dataset.rs
src/addons/detection/: instance.rs  instance_dataset.rs  mod.rs
src/core/: mod.rs
src/core/post_processing/: bbox_nms.rs  mod.rs
src/datasets/: category_info.rs  cls_dataset.rs  dataset_iter.rs  dataset_result.rs  det_dataset.rs  det_dataset_iter.rs  det_dataset_result.rs  mnist.rs  mod.rs  naive_dataset.rs
src/datasets/det_pipelines/: compose.rs  transforms.rs
src/datasets/pipelines/: compose.rs  mod.rs  transforms.rs
src/models/: mod.rs
src/models/backbones/: mod.rs  resnet.rs
src/models/bbox_heads/: fcos_head.rs  mod.rs
src/models/classifiers/: image.rs
src/models/cls_heads/: linear_head.rs  mod.rs
src/models/detectors/: mod.rs  single_stage.rs
src/models/losses/: focal_loss.rs  iou_loss.rs  mod.rs
src/models/necks/: bifpn.rs  gap.rs  mod.rs
src/models/utils/: conv_2d.rs  conv_module.rs  mod.rs
src/modules/infer/: infer.rs
src/nn/: activation.rs  mod.rs  scale.rs
src/tensor/: index.rs
tests/: autocast.rs  classification_instance_test.rs  core_post_processing_test.rs  data_tests.rs  dataset_pipelines_tests.rs  dataset_result_tests.rs  dataset_transforms_tests.rs  datasets_cls_test.rs  datasets_det_test.rs  detection_instance_test.rs  device_tests.rs  instance_data_test.rs  jit_tests.rs  models_backbone_test.rs  models_backbones_test.rs  models_bbox_heads_test.rs  models_classifier_test.rs  models_cls_heads_test.rs  models_detector_test.rs  models_losses_test.rs  models_necks_test.rs  modules_infer_test.rs  nn_tests.rs  serialization_tests.rs  tensor_indexing.rs  tensor_tests.rs  var_store.rs
(+10 files in other folders)
