[package]
name = "river"
version = "0.1.0"
authors = ["Jinghui Zhou<hit.zhou.j.h@gmail.com>"]

description = "Reconstruct Intelligent Vision Engine with Rust."
repository = "https://github.com/JinghuiZhou/RIVER"
keywords = ["pytorch", "deep-learning", "computer-vision"]
categories = ["science"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
lazy_static = "1.3.0"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"