[package]
name = "river"
version = "0.1.0"
authors = ["Jinghui Zhou<hit.zhou.j.h@gmail.com>"]

description = "Reconstruct Intelligent Vision Engine with Rust."
repository = "https://github.com/JinghuiZhou/RIVER"
keywords = ["pytorch", "deep-learning", "computer-vision"]
categories = ["science"]
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]

lazy_static = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

typetag = "0.1"

libc = "0.2.0"
ndarray = "0.15"
rand = "0.8"
thiserror = "1"
torch-sys = { version = "0.8.0", path = "torch-sys" }
zip = "0.6"
half = "1.6"

cpython = { version = "0.2.0", optional = true }

[dev-dependencies]
anyhow = "1"

[workspace]
members = ["torch-sys"]

[features]
default = ["torch-sys/download-libtorch"]
python = ["cpython"]
doc-only = ["torch-sys/doc-only"]
cuda-tests = []

[package.metadata.docs.rs]
features = [ "doc-only" ]
